--- a/src/components/home/styles.css
+++ b/src/components/home/styles.css
@@ -28,12 +28,6 @@
 
 .name{
 	font-size: 1.4rem;
-	margin: 30px 0px 0px;
-}
-
-.profession{
-	margin-top: 0px;
-	font-size: .9rem;
 }
 
 .contact div span{
